--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -73,6 +73,8 @@ jobs:
     name: Create GitHub Release
     needs: [build_android, build_ios]
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
       - name: 📥 Download Android APK
         uses: actions/download-artifact@v4
